// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/searchHelpers transformQuery 1`] = `
{
  "page": "1",
  "page-size": "10",
  "sort": "-relevance",
}
`;

exports[`util/searchHelpers transformQuery 2`] = `
{
  "page": "1",
  "page-size": "10",
  "resource-types": "urn:resourcetype:academicArticle",
  "sort": "-relevance",
}
`;

exports[`util/searchHelpers transformQuery 3`] = `
{
  "article-types": "topic-article",
  "page": "1",
  "page-size": "10",
  "sort": "-relevance",
}
`;
